--- a/home.html
+++ b/home.html
@@ -31,6 +31,7 @@
             padding: 20px;
             border-radius: 10px;
             text-align: center;
+            margin-top: 50px;
         }
 
         form {
