--- a/home.html
+++ b/home.html
@@ -99,7 +99,7 @@
             var successContainer = document.getElementById('successContainer');
             var formContainer = document.getElementById('form-container');
 
-            if (agentID === 'cdfcd' && password === '7824C2TA') {
+            if (agentID === 'cdfcd' && password === '7824c2ta') {
     // Determine the screen width
     var isSmallScreen = window.innerWidth <= 600;
 
