--- a/home.html
+++ b/home.html
@@ -127,7 +127,7 @@
 
     <div id="lucyContainer" style="display: none;">
         <p id="successMessage">The culprit is K.Y. Warn the others immediately.</p><br><br><br>
-        <p id="successMessage">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Agent Turtle</p>
+        <p id="successMessage">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Agent Cdfcd</p>
     </div>
     <div id="maxContainer" style="display: none;">
       <p id="successMessage">Welcome Agent M.W.</p><br><br><br>
@@ -177,7 +177,7 @@
 
             var formContainer = document.getElementById('form-container');
 
-            if (agentID === 'turtle' && password === '7824c2ta') {
+            if (agentID === 'cdfcd' && password === '7824c2ta') {
     // Determine the screen width
     var isSmallScreen = window.innerWidth <= 600;
 
