--- a/home.html
+++ b/home.html
@@ -131,33 +131,33 @@
     </div>
     <div id="maxContainer" style="display: none;">
       <p id="successMessage">Welcome Agent M.W.</p><br><br><br>
-      <p id="successMessage">Here are your mission details:</p>
+      <p id="successMessage">Complete the hunt and find the spy.:</p>
     </div>
     <div id="sondiaContainer" style="display: none;">
         <p id="successMessage">Welcome Agent S.LU</p><br><br><br>
-        <p id="successMessage">Here are your mission details:</p>
+        <p id="successMessage">Complete the hunt and find the spy.:</p>
     </div>
     <div id="serenaContainer" style="display: none;">
       <br><p id="successMessage">Welcome Agent S.LE</p>
-      <p id="successMessage">Here are your mission details:</p>
+      <p id="successMessage">Complete the hunt and find the spy.:</p>
       <p id="successMessage">Our intel operatives have a lead. Report to the site immediately.</p>
       <img src="site.png"></img>
     </div>
     <div id="kimboContainer" style="display: none;">
       <p id="successMessage">Welcome Agent K.Y.</p><br><br><br>
-      <p id="successMessage">Here are your mission details:</p>
+      <p id="successMessage">Complete the hunt and find the spy.:</p>
     </div>
     <div id="hirotoContainer" style="display: none;">
       <p id="successMessage">Welcome Agent H.S.</p><br><br><br>
-      <p id="successMessage">Here are your mission details:</p>
+      <p id="successMessage">Complete the hunt and find the spy.:</p>
     </div>
     <div id="lanzContainer" style="display: none;">
       <p id="successMessage">Welcome Agent L.D.</p><br><br><br>
-      <p id="successMessage">Here are your mission details:</p>
+      <p id="successMessage">Complete the hunt and find the spy.:</p>
     </div>
     <div id="enyaContainer" style="display: none;">
         <<p id="successMessage">Welcome Agent E.C.</p><br><br><br>
-        <p id="successMessage">Here are your mission details:</p>
+        <p id="successMessage">Complete the hunt and find the spy.:</p>
     </div>
 
 
