--- a/home.html
+++ b/home.html
@@ -126,7 +126,7 @@
     </div>
 
     <div id="lucyContainer" style="display: none;">
-        <p id="successMessage">The culprit is K.Y. Warn the others immediately.</p><br><br><br>
+        <p id="successMessage">The culprit is Kangeroo. Warn the others immediately.</p><br><br><br>
         <p id="successMessage">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Agent Cdfcd</p>
     </div>
     <div id="maxContainer" style="display: none;">
